# erik

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  main.rs  package-lock.json
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: DELEGATION-ENFORCEMENT-SUMMARY.md  DELEGATION-REFERENCE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: backend-task.md  devops-task.md  frontend-task.md  qa-task.md  security-task.md
.github/scripts/: create-project-issues.sh
.github/workflows/: esp-idf-build.yml  issue-label-sync.yml  main.yml  rust_ci.yml  webui-build.yml
docs/: legacy-reference.md
docs/project-plan/: github-projects-setup-requirements.md
legacy/: README.md  build.rs
legacy/src/: main.rs  secrets.rs.example
nextgen/: Cargo.toml  README.md  build.rs  sdkconfig.defaults
nextgen/.cargo/: config.toml
nextgen/src/: main.rs  wifi.rs
nextgen/webui/: .dockerignore  .gitignore  Dockerfile  Makefile  TESTING.md  app.js  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.js  run-tests.sh  styles.css
nextgen/webui/tests/: index.spec.js
scripts/: esp32-build.sh
src/: main.rs  webserver.rs
