[package]
name = "erik"
version = "0.1.0"
authors = ["Ron Kuris <swcafe@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "erik"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["embassy-sync"] }
esp-idf-hal = { version = "0.45.2" }

onewire = { git = "https://github.com/kellerkindt/onewire.git" }

[build-dependencies]
embuild = "0.33"
