[package]
name = "pool-controller-nextgen"
version = "0.1.0"
authors = ["Ron Kuris <swcafe@gmail.com>", "Erik" ]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "pool-controller"
harness = false
path = "src/main.rs"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
anyhow = "1.0"
esp-idf-hal = { version = "0.45.2" }
esp-idf-svc = { version = "0.51", features = ["embassy-sync"] }
include_dir = "0.7"
log = "0.4"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", features = ["std"] }
pbkdf2 = "0.12"
rand = { version = "0.8", default-features = false, features = ["std"] }
subtle = "2.5"
heapless = "0.7"

[build-dependencies]
embuild = "0.33"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
